[subresource_filter] Setting ADS setting to default shouldn't populate metadata

Bug: 777430
Change-Id: I85fc949e6257c00458533e2491f6d40fb5d12e2d
Reviewed-on: https://chromium-review.googlesource.com/732072
Reviewed-by: Shivani Sharma <shivanisha@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510812}
Former-commit-id: 183ad2f45380b3ec4a4c2afc71e841e21fc5e6cb